trunk/Archive2/53/9f145764f96856/output
main.cpp: In function 'int main()':
main.cpp:5:16: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (pid = 0) {
                ^
cc1plus: all warnings being treated as errors
